Name:                vector-matrix
Version:             0.1.0
Author:              Job Vranish
Maintainer:          jvranish@gmail.com
Homepage:            http://github.com/jvranish/VectorMatrix
License:             BSD3
License-file:        LICENSE
category:            Math
Synopsis:            An elegant vector and matrix library for haskell
Description:         A vector and matrix library written in (almost) pure Haskell98.
                     It will work with most datatypes that are an instance of Applicative
                     and Traversable (with a few noteable exceptions). It also provides
                     it's own vector type (but you aren't forced to use it).

Build-Type:          Simple
Cabal-Version:       >= 1.2.0

library
    exposed-modules: Data.Vector,
                     Data.Matrix
    build-depends:	base >= 4 && < 5,
                    lenses >= 0.1.3 && < 0.2,
                    fixed-list >= 0.1.1 && < 0.2
    hs-source-dirs: src/
    ghc-options:	-Wall

